--- a/Omdb Movie App-I/style.css
+++ b/Omdb Movie App-I/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -31,4 +31,57 @@ body {
     font-size: 16px;
     font-weight: bold;
     text-align: center;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
+body {
+    font-family: "Inter", sans-serif;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.card img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+#movie-title {
+    margin-top: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+button {
+    background-color: rgb(82, 82, 222);
+    color: white;
+    font-weight: bold;
+    padding: 7px;
+    border: none;
+    font-size: 22px;
+    border-radius: 4px;
+}
+
+input {
+    padding: 5px;
+    border-radius: 4px;
 }
