--- a/local storage/style.css
+++ b/local storage/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Mukta, sans-serif;
 }
+
 
 #container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 150px;
@@ -35,4 +39,31 @@ form {
     background-color: blue;
     color: aliceblue;
     border: 0px;
+}
+
+table {
+    width: 100%;
+}
+
+thead {
+    background-color: aqua;
+    padding: 5px;
+    font-weight: bold;
+    border: 1px solid;
+}
+
+tbody {
+    padding: 5px;
+}
+
+table,
+th,
+td {
+    border: 1px solid #ddd;
+}
+
+th,
+td {
+    padding: 8px;
+    text-align: left;
 }
